--- a/saibamais.css
+++ b/saibamais.css
@@ -1,1 +1,25 @@
 
+.title{
+  font-size: 65px;
+  text-align: center;
+  color: rgb(138, 1, 138);
+  margin-top: 35px;
+}
+
+body{
+  background-color: rgba(211, 214, 8, 0.87);
+}
+
+.are{
+  font-size: 20px;
+  margin-top: 35px;
+  color: rgb(111, 51, 151);
+}
+
+.imagem{
+  
+  padding: 50px;
+  
+ 
+
+}
